--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -7,7 +7,8 @@
     "headings": {
       "diet_calculation": "คำนวณสูตรอาหาร",
       "master": "ข้อมูลหลัก",
-      "raw_material_nutrition_facts": "ข้อมูลโภชนาการวัตถุดิบ"
+      "raw_material_nutrition_facts": "ข้อมูลโภชนาการวัตถุดิบ",
+      "bmr_calculation": "คำนวณ BMR"
     },
     "items": {
       "calculator_formula": "เครื่องคำนวณ",
@@ -18,7 +19,9 @@
       "raw_material": "วัตถุดิบ",
       "formula": "สูตร",
       "nutrition_data_table": "ตารางข้อมูลโภชนาการ",
-      "calculator_history": "ประวัติการคำนวณ"
+      "calculator_history": "ประวัติการคำนวณ",
+      "calculator_formula_bmr": "เครื่องคำนวณ BMR",
+      "calculator_history_bmr": "ประวัติการคำนวณ BMR"
     }
   },
   "button": {
@@ -33,7 +36,8 @@
     "saveAndNext": "บันทึกและเพิ่ม",
     "edit": "แก้ไข",
     "back": "กลับ",
-    "logout": "ออกจากระบบ"
+    "logout": "ออกจากระบบ",
+    "calculator": "คำนวณ"
   },
   "require": {
     "pleaseInput": "กรุณากรอกข้อมูล"
@@ -64,7 +68,17 @@
     "error": {
       "title": "เกิดข้อผิดพลาด"
     },
-    "version": "เวอร์ชั่น"
+    "version": "เวอร์ชั่น",
+    "name": "ชื่อ",
+    "gender": "เพศ",
+    "age": "อายุ",
+    "height": "ส่วนสูง",
+    "weight": "น้ำหนัก",
+    "activity": "กิจกรรม",
+    "calculator_formula": "สูตรการคำนวณ",
+    "unit_cm": "ซม",
+    "unit_kg": "กก",
+    "select_activity": "เลือกกิจกรรม"
   },
   "master": {
     "fgCode": "รหัสกลุ่มอาหาร",
@@ -129,5 +143,17 @@
     "calculating": "กำลังคำนวณ",
     "noSummary": "ผลรวมสารอาหารจะแสดงที่นี่",
     "selectIngredients": "เลือกวัถุดิบ"
-  }
+  },
+  "calculator_bmr": {
+    "code": "รหัสการคำนวณ BMR ",
+    "name": "ชื่อการคำนวณ BMR ",
+    "list": "รายการคำนวณ BMR ",
+    "create": "สร้างคำนวณ BMR ใหม่",
+    "edit": "แก้ไขการคำนวณ BMR ",
+    "detail": "รายละเอียดการคำนวณ BMR ",
+    "hisList": "รายการประวัติการคำนวณ BMR ",
+    "new": "คำนวณ BMR ใหม่",
+    "pageSubtitle": "จัดการ BMRและดูสรุป BMR",
+    "personal_information": "ข้อมูลส่วนตัว"
+    }
 }
